info over uitvoerbaar script toegevoegd

--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -22,6 +22,6 @@ De tweede onderzoeksvraag ging over het al dan niet kunnen verder trainen van re
 
 Wanneer het komt op de beste parameters om dit model te trainen, werd er voornamelijk gebaseerd op de parameters uit een voorbeeld notebook die kan gevonden worden op de GitHub pagina van het model. Hierbij werden ook een aantal parameters gezocht door een optimizer. De enige parameter waar tijdens het onderzoek zelf naar een eventueel betere waarde gezocht werd, is het maximum aantal epochs voor het trainen van het model. Zo werden dus de meest ideale parameters gevonden.
 
-De laatste vraag had als doel een manier te vinden om het model te implementeren in de applicatie. Hierop heeft deze bachelorproef echter geen antwoord. Aangezien het trainen uiteindelijk niet het gewenste resultaat had, werd nog niet gezocht naar een manier om de getrainde pipeline te implementeren, maar wel gebrainstormd over wat volgende stappen zouden kunnen zijn om te leiden tot een betere DER na het trainen.
+De laatste vraag had als doel een manier te vinden om het model te implementeren in de applicatie. Hierop heeft deze bachelorproef echter geen antwoord. Aangezien het trainen uiteindelijk niet het gewenste resultaat had, werd nog niet gezocht naar een manier om de getrainde pipeline te implementeren, maar wel gebrainstormd over wat volgende stappen zouden kunnen zijn om te leiden tot een betere DER na het trainen. Er werd wel een uitvoerbaar script geschreven dat gebruik maakt van het model om de implementatie van een beter model vlotter te laten verlopen
 
 Als conclusie van deze bachelorproef kan dus gesteld worden dat, hoewel er modellen gevonden werden die verder getraind kunnen worden, het uiteindelijke doel van het onderzoek niet behaald werd. Er werden echter wel manieren bedacht hoe verder onderzoek kan leiden tot een beter resultaat dat wel in de applicatie voor elderspeak detectie kan geïmplementeerd worden. Deze opties voor verder onderzoek bestaan uit het trainen op significant meer data, het trainen op twee verschillende databanken en ervoor zorgen dat de audio die in het Zorglab opgenomen wordt een betere kwaliteit heeft.
