nalezen en verbeteren

--- a/bachproef/bespreking.tex
+++ b/bachproef/bespreking.tex
@@ -12,7 +12,7 @@ Zoals vermeld werd in hoofdstuk \ref{ch:resultaten}, waren de resultaten voor de
 
 In hoofdstuk \ref{ch:resultaten} werd ook vermeld dat er een ruisfilter werd toegepast op de audio voor het trainen. Dit werd gedaan in een poging om de kwaliteit van de audio uit het zorglab beter te maken en zo succesvoller te kunnen trainen. Dit had echter een omgekeerd effect. Een mogelijke oorzaak hiervoor was dat de ruisfilter er niet enkel voor zorgde dat er minder ruis was, maar ook dat de stemmen en gesprekken minder duidelijk werden in de audio. De ruisfilter blijkt dus ook niet voor een oplossing te zorgen.
 
-Uiteindelijk werd er dus teruggekeerd naar de oorspronkelijke databank met enkele kleine aanpassingen. Deze aanpassingen gaven een lagere accuraatheid voor het trainen dan de eerste versie van de databank, maar er was wel een groter verschil met de accuraatheid na het trainen dan in de eerste versie, wat dus mogelijks voor het beste resultaat zorgt. Het was mogelijks nog beter geweest als er meer data toegevoegd werd aan deze versie van de databank, maar hier was geen tijd meer voor binnen dit onderzoek. 
+Uiteindelijk werd er teruggekeerd naar de oorspronkelijke databank met enkele kleine aanpassingen. Deze aanpassingen gaven een lagere accuraatheid voor het trainen dan de eerste versie van de databank, maar er was wel een groter verschil met de accuraatheid na het trainen dan in de eerste versie, wat dus voor het beste resultaat zorgt. Het was nog beter geweest als er meer data toegevoegd werd aan deze versie van de databank, maar hier was geen tijd meer voor binnen dit onderzoek. 
 
 \section{Mogelijke oplossingen}
 \label{sec:opl}
