--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -47,5 +47,5 @@ In deze laatste fase zal het model opgeslagen worden en geïmplementeerd worden 
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.75]{./img/verloop.png}
-	\caption{\label{fig:flow-chart}Voorstelling van de fasen van de bachelorproef en hun onderlinge volgorde}
+	\caption[Voorstelling van de fasen van het onderzoek]{\label{fig:flow-chart}Voorstelling van de fasen van de bachelorproef en hun onderlinge volgorde}
 \end{figure}
