--- a/bachproef/resultaten.tex
+++ b/bachproef/resultaten.tex
@@ -12,7 +12,7 @@ Na het opzoeken van bestaande opties werd gekozen om 3 verschillende modellen ui
 
 Het tweede model dat getest werd, is Simple Diarizer van \textcite{Chau}. Dit leek op het eerste zicht een goed model, maar na tijdens het testen bleek dat dit model gebruik maakt van SpeechBrain. SpeechBrain is een ``all-in-one speech toolkit" die ontwikkeld is om onderzoek naar en het ontwikkelen van neurale spraakverwerkingstechnologieën gemakkelijker te maken \autocite{speechbrain}. Het gebruik hiervan bracht echter het probleem met zich mee dat admin rechten nodig waren om er gebruik van te kunnen maken, dus werd er besloten om toch niet met dit model verder te gaan.
 
-Het laatste model dat getest werd was pyannote-audio van \textcite{Bredin2024}. Dit model werd getest op een Vlaams audio fragment en gaf als resultaat een de start- en eindtijden voor elke spreker weer. Er is echter geen optie voorzien om dit om te zetten naar audio-fragmenten. Dit probleem was eenvoudig op te lossen door een externe python library te gebruiken, namelijk pydub. Na het beluisteren van de audiofragmenten bleek dat deze nog niet zeer accuraat waren en dat er dus nog training nodig was, maar het resultaat was al een zeer goed begin. Aangezien pyannote-audio voorzien is om nog verder getraind te worden, werd er gekozen om met dit model verder te gaan. De resultaten hiervan worden in de volgende secties besproken.
+Het laatste model dat getest werd was pyannote-audio van \textcite{Bredin2024}. Dit model werd getest op een Vlaams audio fragment en gaf als resultaat een de start- en eindtijden voor elke spreker weer. Er is echter geen optie voorzien om dit om te zetten naar audio-fragmenten. Dit probleem was eenvoudig op te lossen door een externe python library te gebruiken, namelijk pydub \footnote{Broncode voor pydub: \url{https://github.com/jiaaro/pydub}}. Na het beluisteren van de audiofragmenten bleek dat deze nog niet zeer accuraat waren en dat er dus nog training nodig was, maar het resultaat was al een zeer goed begin. Aangezien pyannote-audio voorzien is om nog verder getraind te worden, werd er gekozen om met dit model verder te gaan. De resultaten hiervan worden in de volgende secties besproken.
 
 \section{Voorbereiden van de data}
 \label{sec:data}
@@ -51,9 +51,9 @@ Tijdens het verloop van het trainen waren er drie versies van de databank. De ee
 
 Voor de keuze van de gebruikte audio bestanden, waren er een aantal zaken waarmee rekening gehouden werd. Het voornaamste waarnaar gekeken werd, was de duur van het audio fragment. Er werd gekozen om vooral gebruik te maken van audio fragmenten die niet langer waren dan 5 tot 10 minuten, omdat langere bestanden meer tijd en resources nodig zouden hebben om te verwerken. Een andere factor die meespeelde bij het zoeken naar audio fragmenten was de hoeveelheid overlap er was tussen de stemmen. Er werd gekozen om vooral fragmenten te gebruiken met minder overlap, omdat dit anders voor een te hoge complexiteit van de bestanden zou zorgen.
 
-Wanneer het komt op de verdeling van de data over de train, test en validatie bestanden, werden er enkel rekening gehouden met de hoeveelheid data die voor elke set gebruikt zou worden. \textcite{BredinDatabase} raadt aan om een verdeling van 0.8-0.1-0.1 toe te passen. Dit houdt in dat 80\% van de data gebruikt wordt voor het trainen, 10\% voor het testen en 10\% voor de validatie.
+Wanneer het komt op de verdeling van de data over de train, test en validatie bestanden, werd er enkel rekening gehouden met de hoeveelheid data die voor elke set gebruikt zou worden. \textcite{BredinDatabase} raadt aan om een verdeling van 0.8-0.1-0.1 toe te passen. Dit houdt in dat 80\% van de data gebruikt wordt voor het trainen, 10\% voor het testen en 10\% voor de validatie.
 
-Bij de eerste versie van de databank werden niet alle audio bestanden die gevonden werden gebruikt in het opstellen van de databank, omdat het oorspronkelijke doel was meer data toe te voegen na een eerste test, maar uiteindelijk gekozen werd om data uit de audio van het Zorglab te gebruiken. Er werd gebruik gemaakt van fragmenten uit 10 audio bestanden en de .rttm files omvatten een totaal van 168 lijnen. In tabel \ref{tbl:verdeling-v1} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld.
+Bij de eerste versie van de databank werd niet van alle gevonden audio bestanden gebruik gemaakt in het opstellen van de databank. De reden hiervoor was dat het oorspronkelijke doel was meer data toe te voegen na een eerste test, maar uiteindelijk gekozen werd om data uit de audio van het Zorglab te gebruiken. Er werd gebruik gemaakt van fragmenten uit 10 audio bestanden en de .rttm bestanden omvatten een totaal van 168 lijnen. In tabel \ref{tbl:verdeling-v1} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld in de vorm van het aantal gebruikte audio bestanden in de subset en het totaal aantal lijnen in de .rttm bestanden.
 
 \begin{table}[]
     \begin{tabular}{@{}lcc@{}}
@@ -66,7 +66,7 @@ Bij de eerste versie van de databank werden niet alle audio bestanden die gevond
     \caption[Verdeling data eerste versie databank]{\label{tbl:verdeling-v1}Verdeling van de data over de train, test en validatie bestanden in de eerste versie van de databank}
 \end{table}
 
-Voor de tweede versie van de databank werd de data uit de audiobestanden van het Zorglab toegevoegd aan de eerste versie van de databank. Hiervoor werd gebruik gemaakt van fragmenten uit 7 bestanden wat leidde tot een totaal van 394 lijnen in de .rttm files. In tabel \ref{tbl:verdeling-v2} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld. Ook hier werd voor de verdeling van de data over de train, test en validatie bestanden niet met specifieke criteria rekening gehouden, behalve dat elke subset minstens een bestand van het Zorglab bevat.
+Voor de tweede versie van de databank werd de data uit de audiobestanden van het Zorglab toegevoegd aan de eerste versie van de databank. Hiervoor werd gebruik gemaakt van fragmenten uit 7 bestanden wat leidde tot een totaal van 394 lijnen in de .rttm bestanden. In tabel \ref{tbl:verdeling-v2} wordt de verdeling van deze data over de train, test en validatie bestanden voorgesteld. Naast de 0.8-0.1-0.1 verdeling, werd er bij deze versie van de databank ook voor gezorgd dat elke subset minstens een bestand van het Zorglab bevat.
 
 \begin{table}[]
     \begin{tabular}{@{}lcc@{}}
@@ -104,7 +104,7 @@ De eerste stap in het trainingsproces is het inladen van de databank in de noteb
 	\item De pipeline die op Hugging Face staat ophalen \footnote{Pyannote speaker diarization pipeline op Hugging Face: \url{https://huggingface.co/pyannote/speaker-diarization-3.1}}
 	\item Gebruik maken van de offline pipeline
 \end{itemize}
-Hier werd gekozen voor het gebruik maken van de offline pipeline, aangezien deze na het trainen opgeslagen moest kunnen worden voor implementatie in de applicatie, wat moeilijker was met de online pipeline.
+Hier werd gekozen voor het gebruik maken van de offline pipeline, aangezien deze na het trainen opgeslagen moest kunnen worden voor implementatie in de applicatie, wat moeilijker is met de online pipeline.
 
 Na het inladen van de databank en het ophalen van de pipeline wordt de accuraatheid van de pipeline berekend door gebruik te maken van pyannote-metrics. Hiervoor creëert de pipeline eerst een RTTM bestand van de audio bestanden in de test subset van de databank. Hierna wordt dit vergeleken met de RTTM bestanden in de test subset en op basis daarvan wordt de DER berekend. De code die hiervoor gebruikt wordt, is te zien in codefragment \ref{code:pyannote-metrics}.
 
@@ -270,13 +270,13 @@ finetuned_pipeline.instantiate({
 \subsection{Resultaten van het trainen}
 \label{subsec:train-res}
 
-De dataset voor het trainen was in het begin opgebouwd met duidelijke audio van televisie programma's. Het trainen op deze data gaf veelbelovende resultaten. De Diarization Error Rate (DER) voor deze data was voor het trainen gelijk aan 9.2\% en door het trainen met deze audio kon de DER verlaagd worden naar 7.4\%. Als extra test werd hierna de pipeline toegepast op een audio van een Vlaams televisieprogramma en een audio bestand dat opgenomen werd in het Zorglab. Hier bleek dat de stemmen in de audio van het televisieprogramma vrij accuraat gescheiden konden worden, maar dat dit helemaal niet het geval was voor de audio uit het Zorglab.
+De databank voor het trainen was in het begin opgebouwd met duidelijke audio van televisie programma's. Het trainen op deze data gaf veelbelovende resultaten. De Diarization Error Rate (DER) voor deze data was voor het trainen gelijk aan 9.2\% en door het trainen met deze audio kon de DER verlaagd worden naar 7.4\%. Als extra test werd hierna de pipeline toegepast op een audio van een Vlaams televisieprogramma en een audio bestand dat opgenomen werd in het Zorglab. Hier bleek dat de stemmen in de audio van het televisieprogramma vrij accuraat gescheiden konden worden, maar dat dit helemaal niet het geval was voor de audio uit het Zorglab.
 
 Hierdoor werd besloten om de databank aan te passen. Er werd data uit het Zorglab toegevoegd aan alle subsets in de databank en het trainingsproces werd opnieuw uitgevoerd. Hierbij was de DER van de pipeline voor het trainen gelijk aan 20.9\%, wat significant hoger is dan bij de data uit de eerste versie van de databank. Na het trainen van het model op de nieuwe data was de DER hoger in plaats van lager, namelijk 56.4\%, wat een onverwachte uitkomst was. In een poging om dit resultaat te verbeteren, werd er extra data toegevoegd aan de subset voor het trainen en werd geëxperimenteerd met het aantal epochs in \lstinline{max_epochs} van het trainen. Het beste resultaat dat hierdoor bekomen werd was een DER van 50.6\% bij een waarde van 50 voor \lstinline{max_epochs}.
 
 Aangezien het trainen met de nieuwe databank niet het gewenste resultaat gaf, werd er besloten om een ruisfilter toe te passen op de audiobestanden van het Zorglab en aan de hand van die bestanden het trainingsproces opnieuw uit te voeren. De ruisfilter die hiervoor gebruikt werd, is deze die door \textcite{Daems2023} reeds geïmplementeerd werd in de applicatie. Dit leverde voor het trainen een DER van 22.5\% op en na het trainen een DER van 52.3\%.
 
-Hierdoor werd besloten om uiteindelijk toch verder te gaan met de eerste versie van de databank, mits een herverdeling van de data over de files, die dus leidde tot de derde versie van de databank die in sectie \ref{sec:data} beschreven is. De resultaten hiervoor waren een DER van 23.4\% voor het trainen en 13.9\% na het trainen.
+Hierdoor werd besloten om uiteindelijk toch verder te gaan met de eerste versie van de databank, mits een herverdeling van de data over de bestanden, die dus leidde tot de derde versie van de databank die in sectie \ref{sec:data} beschreven is. De resultaten hiervoor waren een DER van 23.4\% voor het trainen en 13.9\% na het trainen.
 
 \section{Gebruik maken van het getrainde model}\label{sec:gebruik}
 Om de getrainde pipeline te gebruiken in een andere file, moet deze opnieuw opgebouwd worden met de het getrainde model en de parameters die opgeslagen werden na de finetuning. Dit gebeurt in twee stappen, aangezien de drempelwaardes die gevonden worden tijdens het finetunen geen parameters zijn in de oorspronkelijke pipeline. De eerste stap haalt de opgeslagen pipeline op en wordt geïnstantieerd met alle opgeslagen parameters behalve de drempelwaarden. Dit wordt getoond in codefragment \ref{code:eerste-stap}.
@@ -392,6 +392,6 @@ for speaker in speakers:
 
 \section{Implementatie in de applicatie}
 \label{sec:implementatie}
-Aangezien de resultaten van de pipeline na het trainen niet goed genoeg waren, werd het model nog niet geïmplementeerd in de applicatie. Er werd wel een uitvoerbaar python script gemaakt dat het model gebruikt dat getraind werd op de derde versie van de databank. Dit script kan uitgevoerd worden via de command-line-interface en heeft als argument een pad nodig dat wijst naar een audio bestand. In het script wordt dan eerst de pipeline gecreëerd, zoals eerder getoond in codefragmenten \ref{code:eerste-stap} en \ref{code:tweede-stap}. Hierna worden het RTTM bestand en de aparte audiobestanden gecreëerd in een tijdelijke map, gebaseerd op de code die getoond werd in codefragmenten \ref{code:maak-rttm} en \ref{code:korte-bestanden}. Uiteindelijk worden dan de audiobestanden per spreker gecreëerd in een map ``results'', gebaseerd op de code die reeds getoond werd in codefragment \ref{code:audio-per-spreker}, en worden de bestanden in de tijdelijke folder verwijderd.
+Aangezien de resultaten van de pipeline na het trainen niet goed genoeg waren, werd het model nog niet geïmplementeerd in de applicatie. Er werd wel een uitvoerbaar python script gemaakt dat het model gebruikt dat getraind werd op de derde versie van de databank. Dit script kan uitgevoerd worden via de command-line-interface en heeft als argument een pad nodig dat wijst naar een audio bestand. In het script wordt dan eerst de pipeline gecreëerd, zoals eerder getoond in codefragmenten \ref{code:eerste-stap} en \ref{code:tweede-stap}. Hierna worden het RTTM bestand en de aparte audiobestanden gecreëerd in een tijdelijke map, gebaseerd op de code die getoond werd in codefragmenten \ref{code:maak-rttm} en \ref{code:korte-bestanden}. Uiteindelijk worden dan de audiobestanden per spreker gecreëerd in een map ``results'', gebaseerd op de code die reeds getoond werd in codefragment \ref{code:audio-per-spreker}, en worden de bestanden in de tijdelijke map verwijderd.
 
-Dit deel is op een zodanige manier opgebouwd dat als het model verder getraind zou worden, dit script eenvoudig met het nieuwe model gebruikt zou kunnen worden.
+Dit script is op een zodanige manier opgebouwd dat, als het model verder getraind zou worden, het eenvoudig gebruik kan maken van het nieuwe model.
