--- a/poster/conference_poster.tex
+++ b/poster/conference_poster.tex
@@ -31,56 +31,48 @@
 \maketitle
 
 \begin{abstract}
-It's only a model.
-You don't vote for kings. Who's that then? We found them. Ni! Ni! Ni! Ni!
-The nose? On second thoughts, let's not go there. It is a silly place. Bloody Peasant! And the hat. She's a witch! Where'd you get the coconuts?
+Ondanks het feit dat de zorgsector de dag van vandaag vooral op persoonsgerichte zorgverlening focust, ervaren oudere patiënten vaak dat de communicatie te betuttelend is. Dit fenomeen staat bekend als elderspeak of secondary babytalk. Om dit tegen te gaan is er vanuit de opleiding verpleegkunde aan HOGENT het initiatief genomen om een applicatie te gebruiken die de studenten erop wijst dat ze gebruik maken van elderspeak. Deze applicatie werd reeds ontworpen in voorgaande bachelorproeven aan HOGENT, maar er ontbreken nog een aantal functionaliteiten voordat deze gebruikt kan worden in de opleiding.
+
+Deze bachelorproef heeft als doel een model te trainen dat stemmen kan onderscheiden en dit te implementeren in de applicatie zodat de optie bestaat om enkel de stem van de zorgverlener te analyseren op signalen van secondary babytalk. Hiervoor werd eerst onderzoek gedaan naar bestaande modellen, waarna deze modellen getest werden op bruikbaarheid voor deze bachelorproef. Na deze testen werd gekozen om verder te gaan met pyannote-audio. Dit model werd verder getraind met Vlaamse audio.
+
+Na het trainingsproces moest geconcludeerd worden dat de resultaten van het trainen nog niet accuraat genoeg zijn en er dus geen implementatie in de applicatie kon gebeuren. Dit leidde wel tot enkele mogelijkheden voor verder onderzoek. Het gebruik van een ruisfilter, trainen op meer data of trainen op twee verschillende databanken zouden kunnen leiden tot een beter resultaat, waarna implementatie in de applicatie kan gebeuren.
 \end{abstract}
 
 \begin{multicols}{2} % This is how many columns your poster will be broken into, a portrait poster is generally split into 2 columns
 
 \section{Introductie}
 
-Be quiet! Found them? In Mercia?! The coconut's tropical! But you are dressed as one… Well, what do you want? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods.
+Een aantal jaar geleden was er vanuit de opleiding verpleegkunde vraag naar een applicatie die elderspeak kan detecteren. Er wordt al sinds 2022 gewerkt aan de ontwikkeling van deze applicatie en deze slaagt er reeds in om signalen op te sporen, maar dit gebeurt op zowel de stem van de verpleegkundige in opleiding als op die van de patiënt. In deze bachelorproef werd gezocht naar een manier om de stemmen te onderscheiden zodat enkel de stem van de student geanalyseerd wordt.
 
-Well, what do you want? It's only a model. Camelot! We found them. We shall say `Ni' again to you, if you do not appease us.
+\section{Werkwijze}
 
-The nose? Shut up! Burn her! I am your king. You don't vote for kings.
-
-You can't expect to wield supreme power just `cause some watery tart threw a sword at you! Well, we did do the nose. I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave before I am forced to taunt you a second time!
-
-Why do you think that she is a witch? We want a shrubbery!! I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave before I am forced to taunt you a second time!
-
-\section{Experimenten}
-
-A newt? Camelot! Why? No, no, no! Yes, yes. A bit. But she's got a wart.
-
-Shut up! I dunno. Must be a king. Who's that then? Look, my liege! On second thoughts, let's not go there. It is a silly place.
-
-Shut up! Will you shut up?! No, no, no! Yes, yes. A bit. But she's got a wart. He hasn't got shit all over him. It's only a model. It's only a model.
-
-Bring her forward! I don't want to talk to you no more, you empty-headed animal food trough water! I fart in your general direction! Your mother was a hamster and your father smelt of elderberries! Now leave 
-
-\section{Sectie met figuur}
-
-De {\LaTeX} figure-omgeving bepaalt zelf waar een afbeelding komt en dat is meestal niet op de plek in de tekst waar de figure-omgeving gedefinieerd wordt. Als je wilt forceren dat afbeeldingen toch in de flow van de tekst blijven, dan kan je dat zoals hieronder:
-
+Eerst werd gezocht naar modellen, die getest werden op bruikbaarheid, waarna ook gezocht werd naar data, die in een databank verzameld werd. Hierna werd de training uitgevoerd en een uitvoerbaar script gecreëerd om het model te gebruiken. Onderstaande figuur toont de stappen van het onderzoek:
 \begin{center}
-  \captionsetup{type=figure}
-  \includegraphics[width=1.0\linewidth]{grail}
-  \captionof{figure}{He hasn't got shit all over him. The nose? Where'd you get the coconuts? What do you mean? We shall say `Ni' again to you, if you do not appease us}
+    \captionsetup{type=figure}
+    \includegraphics[width=0.6\linewidth]{flow}
 \end{center}
+Er gebeurde een training met drie verschillende versies van de databank. De eerste training gebeurde aan de hand van fragmenten uit Vlaamse televisieprogramma's. Voor de tweede opzet werd data van het Zorglab toegevoegd in een poging het model te trainen op audio met minder goede kwaliteit en meer ruis. Uiteindelijk werd er voor de derde training teruggekeerd naar de eerste databank, maar gebeurde een herverdeling van de data over de train, test en validatie set.
 
-Let er wel op dat dit tot problemen met bladschikking kan leiden.
+\section{Resultaten}
 
+Het model gaf na het trainen op de eerste versie van de databank een relatief hoge accuraatheid, maar na het toepassen op de audio van het Zorglab, bleek dit niet het gewenste resultaat te geven. Na de training op de tweede databank was de accuraatheid van het model ongeveer vijf keer lager dan de training op de eerste versie van de databank. Na de derde training was de accuraatheid van het model minder goed dan na de training op de eerste databank, maar er was wel een groter verschil tussen de accuraatheid voor en na het trainen. Onderstaande tabel toont de Diarization Error Rate voor en na elk van de drie trainingen:
+\begin{center}
+    \captionsetup{type=figure}
+    \includegraphics[width=0.6\linewidth]{table}
+\end{center}
+    
 \section{Conclusies}
 
-Don't underestimate the Force. Oh God, my uncle. How am I ever gonna explain this? I suggest you try it again, Luke. This time, let go your conscious self and act on instinct. Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force.
+Het uiteindelijke model was nog niet goed genoeg om te implementeren in de applicatie. Er werd wel gekozen om het model dat getraind werd op de laatste versie van de databank te gebruiken om een uitvoerbaar script te creëren. Dit script kan in verder onderzoek gemakkelijk gebruikt worden en kan zorgen voor een vlottere implementatie van een accurater model.
 
 \section{Toekomstig onderzoek}
 
-I care. So, what do you think of her, Han? No! Alderaan is peaceful. We have no weapons. You can't possibly… I have traced the Rebel spies to her. Now she is my only link to finding their secret base.
-
-Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense. You are a part of the Rebel Alliance and a traitor! Take her away! 
+Voor toekomstig onderzoek zijn er drie grote mogelijkheden waarvan mogelijks een combinatie gebruikt kan worden:
+\begin{itemize}
+    \item Ervoor zorgen dat de opnames in het Zorglab betere kwaliteit en minder ruis hebben.
+    \item Het trainen uitvoeren op significant grotere hoeveelheid data.
+    \item Het model eerst trainen op een databank met enkel duidelijke audio gevolgd door het trainen op een databank met minder kwaliteitsvolle audio.
+\end{itemize}
 
 \end{multicols}
 \end{document}
